Correction de la hauteur du bubblepop pour la version mobile
J'ai modifié la hauter dans bubblepop.js pour que ça prenne tout la hauteur de la page non seulement en versio web mais aussi version smartphone.

--- a/client/ui/bubblepop/bubblepop.css
+++ b/client/ui/bubblepop/bubblepop.css
@@ -1,5 +1,5 @@
 #container {
-  height: 900px;
+  height: 1700px;
   width: full-width;
   display: block;
   text-align: center;
@@ -22,5 +22,5 @@
   }
 
 #create {
-    margin-top: 30px;
+    margin: 0 auto;
 }
